More improvements - Integrated PSR compliance where possible - Removed unused classes - Developed simple event system - Added event trigger in various areas - Normalized HTTP status in response - Integrated simple HTTP client - Added custom Exception classes - Added Log facette - Added Session Manager - Added new json response helper

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,13 @@
   "require": {
     "php": ">=8.2",
     "ext-pdo": "*",
-    "ext-json": "*"
+    "ext-json": "*",
+    "psr/log": "^3.0",
+    "nyholm/psr7": "^1.8",
+    "nyholm/psr7-server": "^1.1",
+    "psr/http-message": "^2.0",
+    "psr/http-factory": "^1.1",
+    "psr/http-client": "^1.0",
+    "psr/container": "^2.0"
   }
 }
