Implemented Plugin System - Templates and config gets merged and overridden accordingly - Aiming zero conf installation - Added helper function - Small logic fixes regarding the app()->run() method - Added PHPICO_BASE_PATH - Extended Config entity to return all its contents with ->all() - Further separation of boot sequence - Optimized plugin integration to take only one iteration count to retrieve all plugin information

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,11 @@
       "src/view_helpers.php"
     ]
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
   "require": {
     "php": ">=8.3",
     "ext-pdo": "*",
@@ -30,5 +35,10 @@
     "psr/http-factory": "^1.1",
     "psr/http-client": "^1.0",
     "psr/container": "^2.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^12.1",
+    "phpspec/prophecy": "^1.3",
+    "phpspec/prophecy-phpunit": "^1.1"
   }
 }
