--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\": "tests/"
+      "Tests\\": "tests/",
+      "Fixtures\\": "tests/Fixtures/app/"
     }
   },
   "require": {
