--- a/composer.json
+++ b/composer.json
@@ -40,5 +40,8 @@
   "require-dev": {
     "phpunit/phpunit": "^12.1",
     "phpunit/php-code-coverage": "^12.1"
+  },
+  "scripts": {
+    "test": "phpunit --colors=always"
   }
 }
