--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "phpico/framework",
-  "description": "PHPico – the ultra-light, functional PHP framework for fast microservices and APIs.",
+  "name": "nixphp/framework",
+  "description": "NixPHP – the ultra-light, functional PHP framework for fast microservices and APIs.",
   "minimum-stability": "stable",
   "license": "MIT",
   "type": "library",
