Preparations for v0.1.0 - Revert enum integration for environment and events - Make @template annotation less strict to also allow string identifiers without showing incompatibility issues

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "nixphp/framework",
-  "description": "NixPHP – the ultra-light, functional PHP framework for fast microservices and APIs.",
+  "description": "NixPHP - the ultra-light, functional PHP framework for fast microservices and APIs.",
   "minimum-stability": "stable",
   "license": "MIT",
   "type": "library",
